force-app/main/default/objects/Study_Daily_Report__c/fields/Statistical_Programmer__c.field-meta.xml
<CustomField>
    <fullName>Statistical_Programmer__c</fullName>
    <label>Statistical Programmer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alice Wang-External</fullName>
            </value>
            <value>
                <fullName>Archana Gowdar-External</fullName>
            </value>
            <value>
                <fullName>Baole Fan</fullName>
            </value>
            <value>
                <fullName>Brijesh Ravi</fullName>
            </value>
            <value>
                <fullName>Bryan (Hang) Zhu</fullName>
            </value>
            <value>
                <fullName>Charan Veluri</fullName>
            </value>
            <value>
                <fullName>Chiyou Ni</fullName>
            </value>
            <value>
                <fullName>Dale LeSueur</fullName>
            </value>
            <value>
                <fullName>Esther Wang</fullName>
            </value>
            <value>
                <fullName>Fan Xu (Ben)</fullName>
            </value>
            <value>
                <fullName>Guanlong Ren</fullName>
            </value>
            <value>
                <fullName>Guodong Wei</fullName>
            </value>
            <value>
                <fullName>Haixin Zhang</fullName>
            </value>
            <value>
                <fullName>Hui Jing</fullName>
            </value>
            <value>
                <fullName>Izabella Peszek-External</fullName>
            </value>
            <value>
                <fullName>Jia Li</fullName>
            </value>
            <value>
                <fullName>Jianguo Wei</fullName>
            </value>
            <value>
                <fullName>Jimil Desai</fullName>
            </value>
            <value>
                <fullName>Jingchun Yu</fullName>
            </value>
            <value>
                <fullName>Jinghua Yuan</fullName>
            </value>
            <value>
                <fullName>Joo Young Yim</fullName>
            </value>
            <value>
                <fullName>Junjia Bai</fullName>
            </value>
            <value>
                <fullName>Krishna Avula</fullName>
            </value>
            <value>
                <fullName>Lu Zhang</fullName>
            </value>
            <value>
                <fullName>Michael Klingler</fullName>
            </value>
            <value>
                <fullName>Ming Yang</fullName>
            </value>
            <value>
                <fullName>Mi Young Kwon</fullName>
            </value>
            <value>
                <fullName>Pu Wang</fullName>
            </value>
            <value>
                <fullName>Richard Senecal</fullName>
            </value>
            <value>
                <fullName>Rohit Kamath</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>