force-app/main/default/objects/Study_Daily_Report__c/fields/Study_Operational_Lead__c.field-meta.xml
<CustomField>
    <fullName>Study_Operational_Lead__c</fullName>
    <label>Study Operational Lead</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Collaborator</fullName>
            </value>
            <value>
                <fullName>Regeneron</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>