force-app/main/default/objects/Study_Daily_Report__c/fields/Study_Population__c.field-meta.xml
<CustomField>
    <fullName>Study_Population__c</fullName>
    <label>Study Population</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adolescents (12 to 18 Years)</fullName>
            </value>
            <value>
                <fullName>Adolescents and Adults (12 years and Older)</fullName>
            </value>
            <value>
                <fullName>Adults (above 18 Years)</fullName>
            </value>
            <value>
                <fullName>Children (2 to 11 Years)</fullName>
            </value>
            <value>
                <fullName>Children and Adolescents (6 to 16 Years)</fullName>
            </value>
            <value>
                <fullName>Children to Adults (6 years and Older)</fullName>
            </value>
            <value>
                <fullName>Infants and Toddlers (28 days to 23 months)</fullName>
            </value>
            <value>
                <fullName>Infants to Adolescents (6 months to 18 years)</fullName>
            </value>
            <value>
                <fullName>Infants to Children (6 months to 6 years)</fullName>
            </value>
            <value>
                <fullName>Japanese Adults (above 18 Years)</fullName>
            </value>
            <value>
                <fullName>Normal Healthy Volunteers</fullName>
            </value>
            <value>
                <fullName>Pre  term Newborn Infants</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>