force-app/main/default/objects/Study_Daily_Report__c/fields/Study_Title__c.field-meta.xml
<CustomField>
    <fullName>Study_Title__c</fullName>
    <label>Study Title</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>