force-app/main/default/objects/Study_Daily_Report__c/fields/TA_Operations_Lead__c.field-meta.xml
<CustomField>
    <fullName>TA_Operations_Lead__c</fullName>
    <label>TA Operations Lead</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amy Harman</fullName>
            </value>
            <value>
                <fullName>Cynthia Pan</fullName>
            </value>
            <value>
                <fullName>David Parker</fullName>
            </value>
            <value>
                <fullName>Derek Depelteau</fullName>
            </value>
            <value>
                <fullName>Jaclyn Patterson</fullName>
            </value>
            <value>
                <fullName>Keri Aitchison</fullName>
            </value>
            <value>
                <fullName>Miriam Kore</fullName>
            </value>
            <value>
                <fullName>Moetaz Albizem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>