force-app/main/default/objects/Study_Daily_Report__c/fields/TA_Sub_Class__c.field-meta.xml
<CustomField>
    <fullName>TA_Sub_Class__c</fullName>
    <label>TA Sub Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Allergy</fullName>
            </value>
            <value>
                <fullName>Autoimmune</fullName>
            </value>
            <value>
                <fullName>Cardiovascular Metabolism</fullName>
            </value>
            <value>
                <fullName>Coagulation</fullName>
            </value>
            <value>
                <fullName>Complement</fullName>
            </value>
            <value>
                <fullName>Dermatology</fullName>
            </value>
            <value>
                <fullName>GI</fullName>
            </value>
            <value>
                <fullName>Infectious Disease</fullName>
            </value>
            <value>
                <fullName>Malignancies</fullName>
            </value>
            <value>
                <fullName>Metabolic and Muscle Disease</fullName>
            </value>
            <value>
                <fullName>Neurology</fullName>
            </value>
            <value>
                <fullName>Ophthalmology</fullName>
            </value>
            <value>
                <fullName>Pain</fullName>
            </value>
            <value>
                <fullName>Respiratory</fullName>
            </value>
            <value>
                <fullName>Skeletal Disease</fullName>
            </value>
            <value>
                <fullName>Transplantation and Immunomodulation</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>