force-app/main/default/objects/Study_Daily_Report__c/fields/TAPM__c.field-meta.xml
<CustomField>
    <fullName>TAPM__c</fullName>
    <label>TAPM</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>_TA Project Mgmt (GEN)</fullName>
            </value>
            <value>
                <fullName>Antonio Irizarry</fullName>
            </value>
            <value>
                <fullName>Bradford Horton</fullName>
            </value>
            <value>
                <fullName>Deganit Shechter</fullName>
            </value>
            <value>
                <fullName>Evelyn Gasparino</fullName>
            </value>
            <value>
                <fullName>Kellie Giles</fullName>
            </value>
            <value>
                <fullName>Laura Capicchioni</fullName>
            </value>
            <value>
                <fullName>Lee Sayers</fullName>
            </value>
            <value>
                <fullName>Linda Pan</fullName>
            </value>
            <value>
                <fullName>Marissa Mezzancello</fullName>
            </value>
            <value>
                <fullName>Michele Mackenzie</fullName>
            </value>
            <value>
                <fullName>Monica Alexander</fullName>
            </value>
            <value>
                <fullName>Samantha Dickon</fullName>
            </value>
            <value>
                <fullName>Somang Kim</fullName>
            </value>
            <value>
                <fullName>Tanya Klein</fullName>
            </value>
            <value>
                <fullName>Victoria Serrano</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>