force-app/main/default/objects/Study_Daily_Report__c/fields/TMF_Locked__c.field-meta.xml
<CustomField>
    <fullName>TMF_Locked__c</fullName>
    <label>TMF Locked</label>
    <type>Date</type>
</CustomField>