force-app/main/default/objects/Study_Daily_Report__c/fields/Total_Number_of_Actual_Patients__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Actual_Patients__c</fullName>
    <label>Total Number of Actual Patients</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>